# rincron-mini

./: .gitignore  Cargo.toml  Makefile  README.md
assets/deb/: control  postinst  preinst
assets/systemd/: rincron-mini.service  rincron-mini.user.service
example/: rincron-mini.json
src/: file_check.rs  main.rs  rincron.rs  watch_element.rs  watch_manager.rs
