[package]
name = "rincron_mini"
version = "0.2.0-beta"
edition = "2021"
authors = ["Camille Nevermind"]
readme = "README.md"
description = "A replacement for incron written in Rust"
repository = "https://github.com/nevermille/rincron-mini"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[dependencies]
simple-error = "0.3.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
inotify = "0.10.0"
shell-escape = "0.1.0"
signal-hook = "0.3.0"
nix = "0.26.0"
glob = "0.3.1"
wildmatch = "2.1.1"
